plugins {
    id "com.github.ben-manes.versions" version "$benManesVersionsVersion"

    id 'org.springframework.boot' version "$springBootVersion"
    id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
    id 'java'

    id 'com.github.node-gradle.node' version "$nodeGradleVersion"
    id "org.openrewrite.rewrite" version "$openRewriteVersion"
}

group = 'com.foilen'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

ext {
    set('springCloudAzureVersion', "$springCloudAzureVersion")
    springAiVersion = "$springAiVersion"
}

rewrite {
    activeRecipe("org.openrewrite.java.migrate.UpgradeToJava25")
    activeRecipe("org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration")
    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
    activeStyle("org.openrewrite.java.IntelliJ")
    setExportDatatables(true)
}

dependencies {
    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:$openRewriteRecipeBomVersion"))
    rewrite("org.openrewrite.recipe:rewrite-migrate-java")
    runtimeOnly "jakarta.xml.bind:jakarta.xml.bind-api:4.0.5"
    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
    rewrite("org.openrewrite.recipe:rewrite-spring:$openRewriteSpringVersion")

    implementation "com.foilen:jl-smalltools-mongodb-5-spring:$jlSmalltoolsMongodbVersion"
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation "org.springframework.session:spring-session-data-mongodb:$springSessionMongodbVersion"

    // Database
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Login
    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'

    // Text to speech
    implementation platform("com.google.cloud:libraries-bom:$googleCloudLibrariesBomVersion")
    implementation 'com.google.cloud:google-cloud-texttospeech'
    implementation 'com.google.auth:google-auth-library-oauth2-http'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // Test
    testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:$flapdoodleMongoVersion"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
}

dependencyManagement {
    imports {
        mavenBom "com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
    }
}

springBoot {
    mainClass = 'com.foilen.studies.StudiesApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}

// NodeJS
if (!System.getenv().containsKey('SKIP_NODEJS')) {
    node {
        download = true
        nodeProjectDir = file("${project.projectDir}/src/main/ui")
    }

    task copyNodeBuildFiles(type: Copy) {
        from "${project.projectDir}/src/main/ui/build"
        into "${project.projectDir}/build/resources/main/static"
    }

    // npmInstall -> npm_run_build -> copyNodeBuildFiles
    tasks.bootJar.dependsOn copyNodeBuildFiles
    tasks.compileJava.dependsOn copyNodeBuildFiles
    tasks.copyNodeBuildFiles.dependsOn tasks.npm_run_build
    tasks.npm_run_build.dependsOn tasks.npmInstall

    // Start webui
    task npmRunWatch(type: NpmTask) {
        args = ['run', 'watch']
    }
}
